# cudacodes

./: .gitignore  README.md  query_device.cu  torch_benchmark.py
mat_mul/: CMakeLists.txt  Makefile  README.md  mat_mul.cu  plot_benchmark.py  src.cu  torch_benchmark.py
mat_mul/benchmarks/: naive_1d.csv  naive_2d.csv  plot_results.py  pytorch.csv  tiled_coarse.csv  tiled_fine.csv
mat_mul/include/: naive_1d.cuh  naive_2d.cuh  tiled_coarse.cuh  tiled_fine.cuh
mat_mul/kernels/: naive_xgemm_1d_kernel.cu  naive_xgemm_2d_kernel.cu  tiled_coarse_xgemm.cu  tiled_xgemm_kernel.cu
mat_vec/: README.md  a.out  src.cu
mat_vec/include/: coalesced_warp_sgemv.cuh  coalesced_warpblock_sgemv.cuh  naive_sgemv.cuh  utils.cuh
mat_vec/kernels/: coalesced_warp_sgemv_kernel.cu  coalesced_warpblock_kernel.cu  naive_sgemv_kernel.cu  utils.cu
